# file_manger_api

./: .gitignore  Cargo.toml
migrations/: 20250316115414_init.up.sql  20250316194658_init2.up.sql  20250317202217_init.down.sql  20250317202217_init.up.sql  20250318224719_mfa_enabled.up.sql  20250318232703_lock.up.sql  20250319104122_fix_mfa_setings.up.sql  20250319105343_remove_mfa_setings.up.sql  20250319181914_init.up.sql
src/: main.rs
src/config/: mod.rs
src/models/: error.rs  user.rs
src/routes/: auth_routes.rs  mod.rs
src/services/: auth_service.rs
src/utils/: validation.rs
src/views/: verification_email.html
