[package]
name = "file_manger"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
authcraft = { git = "https://github.com/mohamed-abd-elkahlk/authcraft" }
dotenv = "0.15.0"
env_logger = "0.11.7"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
] }
